<resources>
    <string name="app_name">Bookapp</string>
    <string name="bookview">bookview</string>
    <string name="atomic_habit_descript">"Atomic Habits" by James Clear is a transformative guide to achieving remarkable results through the power of tiny changes. This New York Times bestseller explores the science of habits, offering practical insights and real-life stories. Clear advocates for the compounding impact of small, consistent changes and provides actionable strategies to build positive habits and break negative ones. Focusing on systems rather than goals, the book serves as a roadmap for personal and professional growth. With a compelling blend of science and storytelling, "Atomic Habits" is a must-read for those seeking lasting change and improved productivity in all aspects of life.</string>
    <string name="borrow_book_button">Borrow Book</string>
    <string name="bookdescview" />
    <string name="booksdescview">booksdescview</string>
    <string name="add_a_book">Add a Book</string>
    <string name="upload">Upload</string>
    <string name="book_tittle">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="your_contact_detail">Your contact detail</string>
    <string name="numberofdays">Number Of Days to be issued for</string>
    <string name="_0">0</string>
    <string name="borrowed_book">Borrowed Book</string>
    <string name="available">Available</string>
    <string name="rich_dad_poor">\"Rich Dad Poor Dad\" by Robert T. Kiyosaki contrasts traditional financial advice with unconventional teachings from his best friend\'s father. The book challenges conventional beliefs about money, emphasizing financial literacy, asset acquisition, and passive income. Kiyosaki\'s perspective inspires a mindset shift towards entrepreneurship and wealth creation, making it a timeless guide for financial independence.</string>
    <string name="borrowing_period">Borrowing Period:</string>
</resources>